# MARL-Champs

./: README.md  dashboard.py  dashboard_state.json  env.py  main.py  mlflow.db  pyproject.toml
mlruns/0/: meta.yaml
mlruns/563500457556181837/: meta.yaml
mlruns/563500457556181837/1a919bddc64a43238d54c61f73d0e913/: meta.yaml
mlruns/563500457556181837/1a919bddc64a43238d54c61f73d0e913/metrics/: done  iterations_since_restore  num_env_steps_sampled_lifetime  num_training_step_calls_per_iteration  pid  time_since_restore  time_this_iter_s  time_total_s  timestamp  training_iteration
mlruns/563500457556181837/1a919bddc64a43238d54c61f73d0e913/tags/: env  mlflow.runName
mlruns/563500457556181837/5c78c49750b04efe8aa9d9ea0b35836f/: meta.yaml
mlruns/563500457556181837/5c78c49750b04efe8aa9d9ea0b35836f/metrics/: done  iterations_since_restore  num_env_steps_sampled_lifetime  num_training_step_calls_per_iteration  pid  time_since_restore  time_this_iter_s  time_total_s  timestamp  training_iteration
mlruns/563500457556181837/5c78c49750b04efe8aa9d9ea0b35836f/tags/: mlflow.runName
mlruns/714384024339683852/: meta.yaml
mlruns/714384024339683852/0c787f0617fb4768af91b6c308dab943/: meta.yaml
mlruns/714384024339683852/0c787f0617fb4768af91b6c308dab943/artifacts/: events.out.tfevents.1772812350.MacBook-Artur.local  events.out.tfevents.1772812562.MacBook-Artur.local  params.json  params.pkl  progress.csv  result.json
mlruns/714384024339683852/0c787f0617fb4768af91b6c308dab943/metrics/: done  pid  (+9 more)
mlruns/714384024339683852/7670a9f7ae7a42788804208595c8f278/: meta.yaml
(+1495 files in other folders)
